<resources>
    <string name="app_name">FoodyApp</string>
    <string name="welcome_to_foody">Welcome to Foody</string>
    <string name="about">The application that make distribution of food parcels easier!</string>
    <string name="cart_image">TODO</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="please_choose_the_organization_you_would_like_to_volunteer_for">Please choose the organization you would like to volunteer for</string>
    <string name="pithon_lev">Pithon Lev</string>
    <string name="lasova">Lasova</string>
    <string name="yad_eliezer">Yad Eliezer</string>
    <string name="latet">Latet</string>
    <string name="phone_03_6833388">phone: 03-6833388</string>
    <string name="address_homama_st_12_rishon_lezion_7565512">Address: Homama St 12 Rishon LeZion 7565512</string>
    <string name="phone_03_3731660">phone: 03-3731660</string>
    <string name="address_chelnov_st_18_tel_aviv_6685915">Address: Chelnov St 18 Tel Aviv 6685915</string>
    <string name="address_polanski_st_12_jerusalem">Address: Polanski St 12, Jerusalem</string>
    <string name="address_hamasger_44_tel_aviv_67214_po_box_57636">Address: Hamasger 44 Tel Aviv 67214, PO Box 57636</string>
    <string name="phone_03_5576000">phone: 03-5576000</string>
    <string name="phone_02_5912222">phone: 02-5912222</string>
    <string name="houseName">name</string>
    <string name="houseId">ID</string>
    <string name="volName">Name</string>
    <string name="volLastName">Last Name</string>
    <string name="volPhone">Phone Number</string>
    <string name="volManage">Our Volunteers</string>
    <string name="HouseManage">Our HouseHolds</string>
    <string name="volID">Email</string>
    <string name="houseAddress">address</string>
    <string name="volunteerName">Volunteer Name</string>
    <string name="latetOrg">LATET ORGANIZATION</string>
    <string name="addHouse">Add </string>
    <string name="latetlogo">latatlogo</string>
    <string name="pithonlevlogo">pithonlevlogo</string>
    <string name="lasovalogo">lasovalogo</string>
    <string name="yadeliezerlogo">yadeliezerlogo</string>
    <string name="todo">latatimg</string>
    <string name="ordersTitle">Orders</string>
    <string name="col1">Household name</string>
    <string name="col2">Special requests</string>
    <string name="col3">Delivery confirmation</string>
    <string name="customer1">Bill Johnson</string>
    <string name="customerParcel1">No</string>
    <string name="customer2">Amanda Fox</string>
    <string name="customerParcel2">Gluten-free </string>
    <string name="customer3">Linda Smith</string>
    <string name="customerParcel3">Sugar-free products </string>
    <string name="sendBtn">send Parcel </string>
    <string name="signIn_btn">Sign In </string>
    <string name="signIn_title">Sign In </string>
    <string name="latetTitle">Latet page </string>
    <string name="ourHouseHolds">Our Households </string>
    <string name="volunteertitle">Volunteers page </string>
    <string name="manageTitle">Inventory Management </string>
    <string name="orderTitle">Orders from suppliers </string>
    <string name="backFromOrders">Back </string>
    <string name="DairyBtn">Dairy</string>
    <string name="FVBtn">Fruits and Vegetables </string>
    <string name="MPBtn">Meat and Poultry</string>
    <string name="BakeryBtn">Bakery </string>
    <string name="GroceryBtn">Grocery </string>
    <string name="DairyTitle">Dairy Products</string>
    <string name="GroceryTitle">Grocery</string>
    <string name="FruitVegTitle">Fruits and Vegetables </string>
    <string name="MeatPoultryTitle">Meat and Poultry</string>
    <string name="DairyCol1">Product Name</string>
    <string name="DairyCol2">Current Amount</string>
    <string name="DairyCol5">Order</string>
    <string name="DairyCol3">Update Amount</string>
    <string name="DairyCol4">Order</string>
    <string name="updateBtn">Update</string>
    <string name="MyName">Name</string>
    <string name="chooseOrderBtn">Choose Amount</string>
    <string name="orderMadeToday">This order has already been placed today</string>
    <string name="inventoryCheck">An inventory update has not been done yet today. Please update inventory before making an order</string>
    <string name="inventoryMadeToday">This inventory has already been updated today</string>
    <string name="confirm">Are you sure you want to make this order?</string>
    <string name="confirmIn">Are you sure you want to save inventory?</string>
    <string name="alert_dialog_two_buttons_title">Are you sure?</string>
    <string name="less0">0 is the minimum number of product</string>
    <string name="dialogTitle">Confirm Saving</string>
    <string name="inventory">Inventory Management</string>
    <string name="orders">Orders Management</string>
    <string name="parcels">Packages Management</string>
    <string name="history">Packages History</string>
    <string name="ok">OK</string>
    <string name="save">save</string>
    <string name="add">Add</string>
    <string name="cancel">cancel</string>
    <string name="updateHouse">Update</string>
    <string name="removeHouse">Remove</string>
    <string name="Update">update</string>
    <string name="household_id">Household Id</string>
    <string name="household_name">Household name</string>
    <string name="noPackagesInDB">There are no packages</string>


    <string-array name="roles">
        <item>Volunteer</item>
        <item>User</item>
        <item>Recycling company</item>
    </string-array>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="household_address">Household address</string>
</resources>