<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="4dip" >

    <TextView
        android:id="@+id/idtxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/household_id" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@+id/idfield" />

    <TextView
        android:id="@+id/firstnametxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/household_name"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@+id/firstnamefield" />



    <TextView
        android:id="@+id/lastnametxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/household_address"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@+id/lastnamefield" />

    <Button
        android:text="@string/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/saveAddBtn"/>

    <Button
        android:text="@string/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cancelAddBtn" />


</LinearLayout>