<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignInActivity">
    <include layout="@layout/toolbar_allscreens"/>

    <TextView
        android:id="@+id/title_signIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signIn_title"
        android:textSize="25dp"
        android:layout_margin="10dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/emailsignIn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_margin="10dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/passwordSignIn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_margin="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_gravity="center" />


    <Button
        android:id="@+id/sign_btn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/signIn_btn"
        app:backgroundTint="@color/theme_color"
        />


</LinearLayout>