<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InventoryActivity">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/manageTitle"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/fvBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/FVBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/meatBtn" />

    <Button
        android:id="@+id/dairyBtn"
        android:layout_width="103dp"
        android:layout_height="44dp"
        android:layout_marginTop="44dp"
        android:text="@string/DairyBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <Button
        android:id="@+id/groceryBtn"
        android:layout_width="103dp"
        android:layout_height="44dp"
        android:layout_marginStart="195dp"
        android:layout_marginLeft="195dp"
        android:layout_marginTop="44dp"
        android:text="@string/GroceryBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/meatBtn"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <Button
        android:id="@+id/meatBtn"
        android:layout_width="185dp"
        android:layout_height="44dp"
        android:layout_marginStart="113dp"
        android:layout_marginLeft="113dp"
        android:layout_marginTop="44dp"
        android:text="@string/MPBtn"
        app:layout_constraintStart_toStartOf="@+id/dairyBtn"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <FrameLayout
        android:id="@+id/root_layout"
        android:layout_width="413dp"
        android:layout_height="384dp"
        android:layout_marginTop="57dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fvBtn">

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>