<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UsersAdapterOrg"
    android:weightSum="100">

    <TextView
        android:id="@+id/cusID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="30"
        android:gravity="center"
        android:padding="10sp"
        android:text="@string/houseId"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/nameID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="33.3"
        android:gravity="center"
        android:padding="10sp"
        android:text="@string/houseName"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/addressID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="33.3"
        android:gravity="center"
        android:padding="10sp"
        android:text="@string/houseAddress"
        android:textColor="@color/black"
        android:textSize="18sp" />

</LinearLayout>